# local_sqa

./: .gitignore  README.md  pyproject.toml
local_sqa/: infer.py  train.py
local_sqa/conf/: default.yaml
local_sqa/conf/contrastive/: scl.yaml
local_sqa/conf/data/: nisqa_mixup.yaml
local_sqa/conf/decoder/: bilstm.yaml  conv.yaml  lstm.yaml  transformer.yaml
local_sqa/conf/encoder/: wav2vec2_base.yaml  wav2vec2_large.yaml  wav2vec2_large_peft.yaml  wavlm_base.yaml  wavlm_large.yaml  wavlm_large_peft.yaml
local_sqa/conf/model/: chunk_mos.yaml
local_sqa/conf/slicer/: slicer.yaml
local_sqa/data/: README.md  make_shards.py  utils.py
local_sqa/data/bvcc/: create_json.py
local_sqa/data/nisqa/: augment.py  create_json.py
local_sqa/models/: chunk_mos.py  ssl_mos.py
local_sqa/modules/: contrastive.py  data_loader.py  slicer.py  ssl_mos.py
local_sqa/utils/: __init__.py  nadir_detection.py
